// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterLayout > applies correct icon classes 1`] = `
<div
  class="mx-auto w-full flex-col flex flex flex-col gap-2"
  data-slot="filter-list"
  data-testid="filter-list"
>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
    data-selected="true"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="columns3-icon"
    >
      Columns3
    </div>
    <span
      class=""
    >
      Columns
    </span>
  </p>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="menu-icon"
    >
      Menu
    </div>
    <span
      class=""
    >
      Wide
    </span>
  </p>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80 opacity-20 cursor-default"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="layout-grid-icon"
    >
      LayoutGrid
    </div>
    <span
      class=""
    >
      Visual
    </span>
  </p>
</div>
`;

exports[`FilterLayout > applies correct styling classes 1`] = `
<p
  class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <div
    class="w-5 h-5"
    data-testid="columns3-icon"
  >
    Columns3
  </div>
  <span
    class=""
  >
    Columns
  </span>
</p>
`;

exports[`FilterLayout > applies correct styling classes 2`] = `
<p
  class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <div
    class="w-5 h-5"
    data-testid="menu-icon"
  >
    Menu
  </div>
  <span
    class=""
  >
    Wide
  </span>
</p>
`;

exports[`FilterLayout > renders with correct icons 1`] = `
<div
  class="mx-auto w-full flex-col flex flex flex-col gap-2"
  data-slot="filter-list"
  data-testid="filter-list"
>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
    data-selected="true"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="columns3-icon"
    >
      Columns3
    </div>
    <span
      class=""
    >
      Columns
    </span>
  </p>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="menu-icon"
    >
      Menu
    </div>
    <span
      class=""
    >
      Wide
    </span>
  </p>
  <p
    class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80 opacity-20 cursor-default"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <div
      class="w-5 h-5"
      data-testid="layout-grid-icon"
    >
      LayoutGrid
    </div>
    <span
      class=""
    >
      Visual
    </span>
  </p>
</div>
`;

exports[`FilterLayout > renders with custom selected tab 1`] = `
<p
  class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <div
    class="w-5 h-5"
    data-testid="menu-icon"
  >
    Menu
  </div>
  <span
    class=""
  >
    Wide
  </span>
</p>
`;

exports[`FilterLayout > renders with default selected tab 1`] = `
<div
  class="mx-auto w-full flex-col flex flex flex-col gap-4 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    data-slot="filter-header"
    data-testid="filter-header"
  >
    <h2
      class="text-2xl font-bold text-foreground text-muted-foreground font-light"
      data-testid="heading-2"
    >
      Layout
    </h2>
  </div>
  <div
    class="mx-auto w-full flex-col flex flex flex-col gap-2"
    data-slot="filter-list"
    data-testid="filter-list"
  >
    <p
      class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
      data-selected="true"
      data-slot="filter-item"
      data-testid="filter-item"
    >
      <div
        class="w-5 h-5"
        data-testid="columns3-icon"
      >
        Columns3
      </div>
      <span
        class=""
      >
        Columns
      </span>
    </p>
    <p
      class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
    >
      <div
        class="w-5 h-5"
        data-testid="menu-icon"
      >
        Menu
      </div>
      <span
        class=""
      >
        Wide
      </span>
    </p>
    <p
      class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80 opacity-20 cursor-default"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
    >
      <div
        class="w-5 h-5"
        data-testid="layout-grid-icon"
      >
        LayoutGrid
      </div>
      <span
        class=""
      >
        Visual
      </span>
    </p>
  </div>
</div>
`;

exports[`FilterLayout > rerenders with different selected tabs 1`] = `
<p
  class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <div
    class="w-5 h-5"
    data-testid="columns3-icon"
  >
    Columns3
  </div>
  <span
    class=""
  >
    Columns
  </span>
</p>
`;

exports[`FilterLayout > rerenders with different selected tabs 2`] = `
<p
  class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <div
    class="w-5 h-5"
    data-testid="menu-icon"
  >
    Menu
  </div>
  <span
    class=""
  >
    Wide
  </span>
</p>
`;

exports[`FilterLayout > rerenders with different selected tabs 3`] = `
<p
  class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <div
    class="w-5 h-5"
    data-testid="columns3-icon"
  >
    Columns3
  </div>
  <span
    class=""
  >
    Columns
  </span>
</p>
`;

exports[`FilterLayout > rerenders with different selected tabs 4`] = `
<p
  class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground opacity-20 cursor-default"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <div
    class="w-5 h-5"
    data-testid="layout-grid-icon"
  >
    LayoutGrid
  </div>
  <span
    class=""
  >
    Visual
  </span>
</p>
`;

exports[`FilterLayout > shows correct visual state for selected and unselected tabs 1`] = `
<p
  class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <div
    class="w-5 h-5"
    data-testid="columns3-icon"
  >
    Columns3
  </div>
  <span
    class=""
  >
    Columns
  </span>
</p>
`;

exports[`FilterLayout > shows correct visual state for selected and unselected tabs 2`] = `
<p
  class="text-sm font-semibold text-foreground cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <div
    class="w-5 h-5"
    data-testid="menu-icon"
  >
    Menu
  </div>
  <span
    class=""
  >
    Wide
  </span>
</p>
`;
